fixed centering and overflow of location above map in node--home.tpl.php

--- a/sites/all/themes/project_clear/css/projectclear.css
+++ b/sites/all/themes/project_clear/css/projectclear.css
@@ -3726,3 +3726,14 @@ edit-submit--4:hover{
 #edit-comment-body-und-0-format{
 	display: none;
 }
+
+img.locationIcon{
+	margin: 2.5em auto;
+}
+
+@media only screen and (min-width: 768px) {
+
+	img.locationIcon{
+		margin: 1em auto;
+	}
+}
